[tool.poetry]
name = "fastapi-study"
version = "0.1.0"
description = ""
authors = ["Seungkyoo <wapj2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
